--- a/HtmlStudy/13HTML表单和输入.html
+++ b/HtmlStudy/13HTML表单和输入.html
@@ -11,10 +11,49 @@
 	
 	<!-- <body> 元素包含了可见的页面内容 -->
 	<body>
-		<!-- <h1> 元素定义一个大标题 -->
-		<h1>我的第一个标题</h1>
-		<!-- <p> 元素定义一个段落 -->
-		<p>我的第一个段落。</p>
+		<!-- 在 HTML 页面创建文本域。用户可以在文本域中写入文本 -->
+		<h3>文本域中写入文本</h3>
+		<form action="">
+		First name: <input type="text" name="firstname"><br>
+		Last name: <input type="text" name="lastname">
+		</form>
+		<p><b>注意：</b> 表单本身是不可见的。并且注意一个文本字段的默认宽度是20个字符。</p>
+
+
+		<!-- 创建 HTML 的密码域 -->
+		<h3>输入密码</h3>
+		<form action="">
+		Username: <input type="text" name="user">
+		<br>
+		Password: <input type="password" name="password">
+		</form>
+		<p><b>注意：</b> 密码字段中的字符是隐藏的(显示为星号或圆圈)。</p>
+
+		<!-- <input type="radio"> 标签定义了表单单选框选项 -->
+		<h3>单选按钮（Radio Buttons）</h3>
+		<form>
+			<input type="radio" name="sex" value="male">
+			Male
+			<br>
+			<input type="radio" name="sex" value="female">
+			Female
+		</form>
+		
+		<!-- <input type="checkbox"> 定义了复选框. 用户需要从若干给定的选择中选取一个或若干选项。 -->
+		<h3>复选框（Checkboxes）</h3>
+		<form>
+		<input type="checkbox" name="vehicle" value="Bike">I have a bike<br>
+		<input type="checkbox" name="vehicle" value="Car">I have a car
+		</form>
+		
+		
+		<h3>提交按钮(Submit Button)</h3>
+		<form name="input" action="html_form_action.php" method="get">
+		Username: <input type="text" name="user">
+		<input type="submit" value="Submit">
+		</form>
+		
+		
 	</body>
 	
 </html>
